--- a/Xcelerate/Views/UserCars/Information.cshtml
+++ b/Xcelerate/Views/UserCars/Information.cshtml
@@ -30,7 +30,7 @@
 					<li><strong>Euro Standard:</strong> @Model.EuroStandard</li>
 					<li><strong>Fuel Type:</strong> @Model.FuelType</li>
 					<li><strong>Colour:</strong> @Model.Colour</li>
-					<li><strong>Transmission:</strong> @Model.Transmition</li>
+					<li><strong>Transmission:</strong> @Model.Transmission</li>
 					<li><strong>Drive Train:</strong> @Model.DriveTrain</li>
 					<li><strong>Weight:</strong> @Model.Weight KG</li>
 					<li><strong>Mileage:</strong> @Model.Mileage KM</li>
