--- a/Xcelerate/Views/Ad/Edit.cshtml
+++ b/Xcelerate/Views/Ad/Edit.cshtml
@@ -165,8 +165,8 @@
 			</div>
 
 			<div class="form-input">
-				<label asp-for="@Model.Transmition">Transmission</label>
-				<select name="Transmission" asp-for="@Model.Transmition" id="form-input">
+				<label asp-for="@Model.Transmission">Transmission</label>
+				<select name="Transmission" asp-for="@Model.Transmission" id="form-input">
 					@foreach (var transmission in Enum.GetValues(typeof(TransmissionEnum)))
 					{
 						if ((TransmissionEnum)transmission != TransmissionEnum.Default)
@@ -175,7 +175,7 @@
 						}
 					}
 				</select>
-				<span asp-validation-for="@Model.Transmition" class="text-danger"></span>
+				<span asp-validation-for="@Model.Transmission" class="text-danger"></span>
 			</div>
 
 			<div class="form-input">
