--- a/Xcelerate/Views/UserCars/Sell.cshtml
+++ b/Xcelerate/Views/UserCars/Sell.cshtml
@@ -153,14 +153,14 @@
 			</div>
 
 			<div class="form-input">
-				<label asp-for="@Model.Transmition">Transmission</label>
-				<select name="Transmission" asp-for="@Model.Transmition" id="form-input">
+				<label asp-for="@Model.Transmission">Transmission</label>
+				<select name="Transmission" asp-for="@Model.Transmission" id="form-input">
 					@foreach (var transmission in Enum.GetValues(typeof(TransmissionEnum)))
 					{
 						<option value="@transmission">@transmission</option>
 					}
 				</select>
-				<span asp-validation-for="@Model.Transmition" class="text-danger"></span>
+				<span asp-validation-for="@Model.Transmission" class="text-danger"></span>
 			</div>
 
 			<div class="form-input">
