--- a/Xcelerate/Views/UserCars/Index.cshtml
+++ b/Xcelerate/Views/UserCars/Index.cshtml
@@ -32,7 +32,7 @@
 					<footer class="bottom-text">
 						<i>
 							<a class="sell-button" asp-area="" asp-controller="UserCars" asp-action="Sell" asp-route-carId="@ad.CarId">Sell</a>
-							<form asp-area="" asp-controller="Ad" asp-action="Delete" asp-route-carId="@ad.CarId" method="post">
+							<form asp-area="" asp-controller="UserCars" asp-action="Delete" asp-route-carId="@ad.CarId" method="post">
 								<button type="submit" class="delete-button">Delete</button>
 							</form>
 							<a class="view-button" asp-area="" asp-controller="UserCars" asp-action="Information" asp-route-carId="@ad.CarId">View</a>
@@ -60,4 +60,41 @@ else
 			</div>
 		</article>
 	</section>
+}
+
+@if (TempData["ConfirmUserCarDelete"] != null && (bool)TempData["ConfirmUserCarDelete"])
+{
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script>
+		Swal.fire({
+			title: 'Confirm Delete',
+			text: 'Are you sure you want to delete this car ad?',
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonColor: '#d33',
+			cancelButtonColor: '#3085d6',
+			confirmButtonText: 'Yes, delete it!'
+		}).then((result) => {
+			if (result.isConfirmed) {
+
+				var form = document.createElement('form');
+				form.method = 'post';
+				form.action = '/UserCars/DeleteConfirmed';
+
+				var input = document.createElement('input');
+				input.type = 'hidden';
+				input.name = 'carId';
+				input.value = '@TempData["UserCarIdToDelete"]';
+
+				form.appendChild(input);
+
+				// Append the form to the document body and submit it
+				document.body.appendChild(form);
+				form.submit();
+
+		@TempData.Remove("ConfirmUserCarDelete")
+		@TempData.Remove("UserCarIdToDelete")
+					}
+		});
+	</script>
 }
