--- a/Xcelerate/Views/UserCars/Sell.cshtml
+++ b/Xcelerate/Views/UserCars/Sell.cshtml
@@ -98,9 +98,12 @@
 			<div class="form-input">
 				<label asp-for="@Model.Year">Year</label>
 				<select name="Year" asp-for="@Model.Year" id="form-input">
-					@for (int year = 1900; year <= 2099; year++)
-					{
-						<option value="@year">@year</option>
+					@{
+						int currentYear = DateTime.Now.Year;
+						for (int year = currentYear; year >= 1900; year--)
+						{
+							<option value="@year">@year</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.Year" class="text-danger"></span>
@@ -112,7 +115,10 @@
 				<select name="Condition" asp-for="@Model.Condition" id="form-input">
 					@foreach (var condition in Enum.GetValues(typeof(ConditionEnum)))
 					{
-						<option value="@condition">@condition</option>
+						if ((ConditionEnum)condition != ConditionEnum.Default)
+						{
+							<option value="@condition">@condition</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.Condition" class="text-danger"></span>
@@ -123,7 +129,10 @@
 				<select name="EuroStandard" asp-for="@Model.EuroStandard" id="form-input">
 					@foreach (var standard in Enum.GetValues(typeof(EuroStandardEnum)))
 					{
-						<option value="@standard">@standard</option>
+						if ((EuroStandardEnum)standard != EuroStandardEnum.Default)
+						{
+							<option value="@standard">@standard</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.EuroStandard" class="text-danger"></span>
@@ -134,7 +143,10 @@
 				<select name="FuelType" asp-for="@Model.FuelType" id="form-input">
 					@foreach (var fuelType in Enum.GetValues(typeof(FuelTypeEnum)))
 					{
-						<option value="@fuelType">@fuelType</option>
+						if ((FuelTypeEnum)fuelType != FuelTypeEnum.Default)
+						{
+							<option value="@fuelType">@fuelType</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.FuelType" class="text-danger"></span>
@@ -145,7 +157,10 @@
 				<select name="Colour" asp-for="@Model.Colour" id="form-input">
 					@foreach (var colour in Enum.GetValues(typeof(ColourEnum)))
 					{
-						<option value="@colour">@colour</option>
+						if ((ColourEnum)colour != ColourEnum.Default)
+						{
+							<option value="@colour">@colour</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.Colour" class="text-danger"></span>
@@ -156,7 +171,10 @@
 				<select name="Transmission" asp-for="@Model.Transmission" id="form-input">
 					@foreach (var transmission in Enum.GetValues(typeof(TransmissionEnum)))
 					{
-						<option value="@transmission">@transmission</option>
+						if ((TransmissionEnum)transmission != TransmissionEnum.Default)
+						{
+							<option value="@transmission">@transmission</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.Transmission" class="text-danger"></span>
@@ -167,7 +185,10 @@
 				<select name="DriveTrain" asp-for="@Model.DriveTrain" id="form-input">
 					@foreach (var driveTrainType in Enum.GetValues(typeof(DriveTrainEnum)))
 					{
-						<option value="@driveTrainType">@driveTrainType</option>
+						if ((DriveTrainEnum)driveTrainType != DriveTrainEnum.Default)
+						{
+							<option value="@driveTrainType">@driveTrainType</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.DriveTrain" class="text-danger"></span>
@@ -178,7 +199,10 @@
 				<select name="BodyType" asp-for="@Model.BodyType" id="form-input">
 					@foreach (var bodyType in Enum.GetValues(typeof(BodyTypeEnum)))
 					{
-						<option value="@bodyType">@bodyType</option>
+						if ((BodyTypeEnum)bodyType != BodyTypeEnum.Default)
+						{
+							<option value="@bodyType">@bodyType</option>
+						}
 					}
 				</select>
 				<span asp-validation-for="@Model.BodyType" class="text-danger"></span>
