--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -142,6 +142,69 @@
 
 </section>
 
+@if (TempData["DeleteMessage"] != null && (bool)TempData["DeleteMessage"])
+{
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+	<script>
+		Swal.fire({
+			icon: 'success',
+			title: 'Ad deleted!',
+			text: 'You have succesfully deleted an ad!',
+		});
+	</script>
+	@TempData.Remove("DeleteMessage")
+	;
+}
+
+@if (TempData["ConfirmDelete"] != null && (bool)TempData["ConfirmDelete"])
+{
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script>
+		Swal.fire({
+			title: 'Confirm Delete',
+			text: 'Are you sure you want to delete this car ad?',
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonColor: '#d33',
+			cancelButtonColor: '#3085d6',
+			confirmButtonText: 'Yes, delete it!'
+		}).then((result) => {
+			if (result.isConfirmed) {
+
+				var form = document.createElement('form');
+				form.method = 'post';
+				form.action = '/Review/DeleteConfirmed';
+
+				var input = document.createElement('input');
+				input.type = 'hidden';
+				input.name = 'reviewId';
+				input.value = '@TempData["ReviewAdIdToDelete"]';
+
+				form.appendChild(input);
+
+				// Append the form to the document body and submit it
+				document.body.appendChild(form);
+
+				var input = document.createElement('input');
+				input.type = 'hidden';
+				input.name = 'adId';
+				input.value = '@TempData["AdId"]';
+
+				form.appendChild(input);
+
+				// Append the form to the document body and submit it
+				document.body.appendChild(form);
+				form.submit();
+
+		@TempData.Remove("ConfirmDelete")
+		@TempData.Remove("ReviewAdIdToDelete")
+		@TempData.Remove("AdId")
+					}
+		});
+	</script>
+}
+
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 	<script src="~/js/Ad/Ad.js" asp-append-version="true"></script>
